--- a/src/ejs/config.json
+++ b/src/ejs/config.json
@@ -1,16 +1,16 @@
 {
   "default": {
-    "title": "default title",
-    "description": "default description"
+    "title": "未来を築く技術のトーアス | 製缶・配管・受託業務",
+    "description": "トーアス株式会社のホームページです。"
   },
 
   "home": {
-    "title": "document",
-    "description": "home description"
+    "title": "未来を築く技術のトーアス | 製缶・配管・受託業務",
+    "description": "トーアス株式会社のホームページです。"
   },
 
   "contact": {
-    "title": "contact",
-    "description": "page description"
+    "title": "お問い合せ",
+    "description": "トーアス株式会社のお問い合わせページです。"
   }
 }
