--- a/src/ejs/config.json
+++ b/src/ejs/config.json
@@ -1,16 +1,418 @@
 {
   "default": {
-    "title": "default title",
-    "description": "default description"
+    "title": "未来を築く技術のトーアス | 製缶・配管・受託業務",
+    "description": "トーアス株式会社のホームページです。",
+    "link": [
+      "occupation.html",
+      "occupation.html#occupation",
+      "company.html",
+      "recruit.html",
+      "contact.html"
+    ]
   },
-
+  "common": {
+    "footer": {
+      "motto": "未來を築く技術のトーアス",
+      "img_name": [
+        "placeholder.svg",
+        "tel.svg",
+        "printer.svg",
+        "mail.svg"
+      ],
+      "company_info": [
+        "〒675-0019<br>加古川市野口町水足1575",
+        "TEL：079-423-2344",
+        "FAX：079-423-3616",
+        "E-mail：info@toasu.jp"
+      ]
+    }
+  },
   "home": {
-    "title": "document",
-    "description": "home description"
+    "title": "未来を築く技術のトーアス | 製缶・配管・受託業務",
+    "description": "トーアス株式会社のホームページです。",
+    "top_desc": "設立から７０年経った今でも変わらぬ想い。<br>それは『魂を込めたモノづくりで社会に貢献する』ということ。<br>職人一人ひとりが確かな技術力を駆使し<br>生産設備の設計・製作～施行・メンテナンスまでを一貫して手掛けています。",
+    "menu": [
+      {
+        "link": "works.html",
+        "title": "業務内容"
+      },
+      {
+        "link": "設備案内",
+        "title": "occupation.html"
+      },
+      {
+        "link": "company.html",
+        "title": "会社概要"
+      },
+      {
+        "link": "recruit.html",
+        "title": "求人情報"
+      },
+      {
+        "link": "contact.html",
+        "title": "問い合わせ"
+      }
+    ]
   },
-
+  "occupation": {
+    "title": "設備案内",
+    "title_en": "work",
+    "description": "トーアス株式会社の設備案内ページです。",
+    "heading": {
+      "top": [
+        "業務案内"
+      ],
+      "bottom": [
+        "設備案内"
+      ]
+    },
+    "menu_banner_description": [
+      "製缶",
+      "配管",
+      "ロープアクセス",
+      "受託業務"
+    ],
+    "menu_banner_link": [
+      "work",
+      "work",
+      "work",
+      "work"
+    ],
+    "gallery": [
+      "油圧プレス",
+      "油圧プレス",
+      "油圧プレス",
+      "油圧プレス",
+      "油圧プレス",
+      "油圧プレス",
+      "油圧プレス"
+    ]
+  },
+  "work": {
+    "title": "製缶",
+    "description": "トーアス株式会社の製品情報ページです。",
+    "heading": {
+      "top": [
+        "私達の技術がお客様<br>ビジネスの未來を変える<br>かも知れません。"
+      ],
+      "middle": [
+        "当社はこれまでに多くの企業様へ、木材パルプやマニラ麻、各種化学繊維を駆使したさまざまな特殊紙・機能紙をご提案してきました。<br>既存製品の改良から新製品の開発まで、お気軽にご相談ください。"
+      ],
+      "bottom": [
+        "私達にできること"
+      ]
+    },
+    "skills": [
+      "スリット加工",
+      "スリット加工",
+      "スリット加工",
+      "スリット加工",
+      "スリット加工",
+      "スリット加工"
+    ],
+    "skill_descriptions": [
+      "技術内容技術内容技術内容技術内容技術内容技術内容",
+      "技術内容技術内容技術内容技術内容技術内容技術内容",
+      "技術内容技術内容技術内容技術内容技術内容技術内容",
+      "技術内容技術内容技術内容技術内容技術内容技術内容",
+      "技術内容技術内容技術内容技術内容技術内容技術内容",
+      "技術内容技術内容技術内容技術内容技術内容技術内容"
+    ]
+  },
+  "company": {
+    "title": "会社概要",
+    "title_en": "company",
+    "description": "トーアス株式会社の会社概要ページです。",
+    "heading": {
+      "top": [
+        "お問い合わせ"
+      ],
+      "middle": [
+        "ご挨拶"
+      ],
+      "bottom": [
+        "当社は、昭和22年4月藤本茂樹が創業しました。<br>時代の趨勢にともない、昭和37年頃より製缶、配管、機会据付工事部門に進出しました。それ以降、より高度な技術を、より精度の高い製品として提供するために研鑽に励んでまいりました。<br>計画から設計、施工まで、一貫した業務体制を基本にし、製作・加工・組立、品質管理や検査、工事、引渡し及び施工後のメンテナンスまで、責任を持って行っております。"
+      ],
+      "name": [
+        "代表取締役社長　藤本　陽一"
+      ]
+    },
+    "info": [
+      {
+        "title": "会社概要",
+        "item": [
+          {
+            "label": "社名",
+            "key": "トーアス株式会社"
+          },
+          {
+            "label": "所在地",
+            "key": "〒６７５－００１９<br>兵庫県加古川市野口町水足１５７５"
+          },
+          {
+            "label": "電話番号",
+            "key": "０７９－４２３－２３４４"
+          },
+          {
+            "label": "FAX番号",
+            "key": "０７９－４２３－３６１６"
+          },
+          {
+            "label": "創　　立",
+            "key": "昭和２２年４月"
+          },
+          {
+            "label": "設　　立",
+            "key": "昭和２３年１２月"
+          },
+          {
+            "label": "資本金",
+            "key": "１０，０００，０００円"
+          },
+          {
+            "label": "従業員",
+            "key": "３５名"
+          },
+          {
+            "label": "役　　員",
+            "key": "代表取締役社長　藤本　陽一<br>常務取締役　　　  橘　守男"
+          },
+          {
+            "label": "敷地面積",
+            "key": "７，０１４ｍ2"
+          },
+          {
+            "label": "建物面積",
+            "key": "延２，３８４ｍ2　（工場、事務所）"
+          }
+        ]
+      }
+    ],
+    "list": [
+      {
+        "title": "主な業務",
+        "item": [
+          "製缶・配管・機械設計製作据付、環境装置、保冷・保温・防音・空調ダクト工事、OA機器部品加工、ゴム・ﾌﾟﾗｽﾁｯｸ製品の加工、倉庫管理、ロープアクセス工事"
+        ]
+      },
+      {
+        "title": "関連企業",
+        "item": [
+          "【空調ダクト工事】  トーアスジェット株式会社",
+          "【ロープアクセス講習】  株式会社ネットワーク "
+        ]
+      },
+      {
+        "title": "建設業許可",
+        "item": [
+          "兵庫県知事　（般－１１）　第４００８５４号",
+          "管工事、板金工事、熱絶縁工事、鋼構造物工事、機械器具設置工事、清掃施設工事"
+        ]
+      },
+      {
+        "title": "取引銀行",
+        "item": [
+          "三井住友銀行　加古川支店",
+          "中小企業金融公庫"
+        ]
+      }
+    ],
+    "list2": [
+      {
+        "title": "主要納入先",
+        "item": [
+          "<span>【配管工事】</span>",
+          "原料油配管工事",
+          "季節原料タンクWE,WF配管工事",
+          "NH3低音吸収式冷凍設備配管工事",
+          "屋外SプラントS-O-2更新工事",
+          "4号調成L、N別叩解設備工事",
+          "屋外中圧蒸気配管工事",
+          "消火栓配管他移設工事",
+          "スラリー製造設備配管工事",
+          "排水処理設備配管工事",
+          "加工排水COD処理設備（2期工事）",
+          "製成仮配管工事",
+          "ジャケット用冷温水配管工事",
+          "冷水、温水送り配管工事",
+          "冷水、温水戻り配管工事",
+          "円形冷水タンク～仕込機械室冷水配管工事",
+          "3工場スチームエゼクター増設工事",
+          "11抄高圧洗浄水配管工事",
+          "スラリー設備ユーティリティー配管工事",
+          "<span>【製缶】</span>",
+          "D-5,6ドレンタンク更新工事",
+          "みりんC調味液タンク製作、据付工事",
+          "二軸攪拌糟製作、据付工事",
+          "屋外プラント原料タンク設置工事",
+          "排気フード製作工事",
+          "N受入タンク（１６?）、セーバータンク（５?）",
+          "E-4貯糟製作",
+          "屋外仕込タンク増設工事",
+          "屋外仕込タンク底板製作"
+        ]
+      }
+    ],
+    "list3": [
+      {
+        "title": "会社沿革",
+        "item": [
+          {
+            "label": "昭和２２年１２月",
+            "key": "東洋アスベスト工業所として発足　－　保温・保冷工事を始める"
+          },
+          {
+            "label": "昭和２３年１２月",
+            "key": "東洋アスベスト工業株式会社を設立"
+          },
+          {
+            "label": "昭和３７年　４月",
+            "key": " 製缶、配管、機械据付工事部門に進出"
+          },
+          {
+            "label": "昭和４５年　４月",
+            "key": "資本金４００万円に増資"
+          },
+          {
+            "label": "昭和５３年　２月",
+            "key": "資本金１，０００万円に増資"
+          },
+          {
+            "label": "昭和５４年１２月",
+            "key": "トーアス株式会社に商号変更"
+          },
+          {
+            "label": "昭和５７年　７月",
+            "key": "加古川市野口町水足に加古川工場を建設"
+          },
+          {
+            "label": "昭和５８年　２月",
+            "key": "加古川市野口町水足１５７５に本社移転"
+          },
+          {
+            "label": "平成　３年　３月",
+            "key": "空調断熱部門分離　－　トーアスジェット株式会社"
+          }
+        ]
+      }
+    ],
+    "list4": [
+      {
+        "title": "IRATA",
+        "item": "プラント施工技術に加え、世界に公認されたロープアクセス技術により迅速で効率的なメインテナンス分野のトップランナーとして社会に貢献致します。トーアス㈱は、ＩＲＡＴＡ公認の世界で通用する正式メンバーカンパニーです"
+      }
+    ]
+  },
+  "recruit": {
+    "title": "採用情報",
+    "title_en": "recruit",
+    "description": "トーアス株式会社の求人情報ページです。",
+    "heading": {
+      "top": [
+        "採用情報"
+      ],
+      "middle": [
+        "就職中・求職者のみなさまへ"
+      ],
+      "bottom": [
+        "トーアスのことを知り、自己実現のフィールドとして少しでも夢や可能性を感じていただけたなら、ぜひ当社の門をたたいてください。"
+      ]
+    },
+    "saiyo": {
+      "data": [
+        {
+          "title": [
+            "採用データ"
+          ],
+          "item": [
+            {
+              "key": "募集業種",
+              "value": "現場監督"
+            },
+            {
+              "key": "雇用形態",
+              "value": "正社員"
+            },
+            {
+              "key": "応募資格",
+              "value": "高専、大学、大学院卒業または卒業見込みの方"
+            },
+            {
+              "key": "提出書類",
+              "value": "履歴書（写真貼付）"
+            },
+            {
+              "key": "採用プロセス",
+              "value": ""
+            }
+          ]
+        },
+        {
+          "title": [
+            "待遇・勤務・実績"
+          ],
+          "item": [
+            {
+              "key": "初任給",
+              "value": "2014年４月実績<br>四大卒月給/19万1000円"
+            },
+            {
+              "key": "賞与",
+              "value": "年2回(6月・12月)"
+            },
+            {
+              "key": "昇給",
+              "value": ""
+            },
+            {
+              "key": "勤務時間",
+              "value": "8:00~16:30<br>年間休日111日"
+            },
+            {
+              "key": "有給休暇",
+              "value": ""
+            },
+            {
+              "key": "保険",
+              "value": ""
+            },
+            {
+              "key": "福利厚生",
+              "value": ""
+            }
+          ]
+        }
+      ]
+    }
+  },
   "contact": {
-    "title": "contact",
-    "description": "page description"
+    "title": "お問い合せ",
+    "title_en": "contact",
+    "description": "トーアス株式会社のお問い合わせページです。",
+    "heading": {
+      "top": [
+        "お問い合わせ"
+      ],
+      "bottom": [
+        "当社へのお問い合せは、下記フォームまたは、電話、ＦＡＸ、Ｅ－Ｍａｉｌにて受け付けております。<br>お気軽にお問い合せください。"
+      ]
+    },
+    "time": {
+      "top": "【 受付時間 】 平日8:30〜17:00",
+      "bottom": "土・日曜、祝日、夏季休暇や年末年始などは休みをいただいております。"
+    }
+  },
+  "notfound": {
+    "title": "お探しのページはありません。",
+    "title_en": "404",
+    "description": "トーアス株式会社のホームページです。",
+    "heading": {
+      "top": [
+        "404 not found"
+      ],
+      "bottom": [
+        "お探しのページは存在しません。<br>当社へのお問い合せは、下記フォームまたは、電話、ＦＡＸ、Ｅ－Ｍａｉｌにて受け付けております。<br>お気軽にお問い合せください。"
+      ]
+    }
   }
 }
