--- a/src/ejs/config.json
+++ b/src/ejs/config.json
@@ -37,8 +37,8 @@
         "title": "業務内容"
       },
       {
-        "link": "設備案内",
-        "title": "occupation.html"
+        "link": "occupation.html",
+        "title": "設備案内"
       },
       {
         "link": "company.html",
