--- a/src/ejs/config.json
+++ b/src/ejs/config.json
@@ -52,6 +52,52 @@
         "link": "contact.html",
         "title": "問い合わせ"
       }
+    ],
+    "contents": [
+      {
+        "title": "業務内容",
+        "en": "SERVICE",
+        "link": "occupation.html",
+        "desc": "当社はこれまでに多くの企業様へ、木材パルプやマニラ麻、各種化学繊維を駆使したさまざまな特殊紙・機能紙をご提案してきました。<br>既存製品の改良から新製品の開発まで、お気軽にご相談ください。"
+      },
+      {
+        "title": "会社概要",
+        "en": "COMPANY",
+        "link": "company.html",
+        "desc": "当社はこれまでに多くの企業様へ、木材パルプやマニラ麻、各種化学繊維を駆使したさまざまな特殊紙・機能紙をご提案してきました。<br>既存製品の改良から新製品の開発まで、お気軽にご相談ください。"
+      },
+      {
+        "title": "求人情報",
+        "en": "RECRUIT",
+        "link": "recruit.html",
+        "desc": "当社はこれまでに多くの企業様へ、木材パルプやマニラ麻、各種化学繊維を駆使したさまざまな特殊紙・機能紙をご提案してきました。<br>既存製品の改良から新製品の開発まで、お気軽にご相談ください。"
+      }
+    ],
+    "service": [
+      {
+        "id": "1",
+        "title": "鉄工",
+        "desc": "私たちのサービス体系や<br>製造工程について<br>ご紹介いたします。",
+        "link": "seikan.html"
+      },
+      {
+        "id": "2",
+        "title": "ロープアクセス",
+        "desc": "私たちのサービス体系や<br>製造工程について<br>ご紹介いたします。",
+        "link": "seikan.html"
+      },
+      {
+        "id": "3",
+        "title": "受託業務",
+        "desc": "私たちのサービス体系や<br>製造工程について<br>ご紹介いたします。",
+        "link": "seikan.html"
+      },
+      {
+        "id": "4",
+        "title": "社内業務",
+        "desc": "私たちのサービス体系や<br>製造工程について<br>ご紹介いたします。",
+        "link": "seikan.html"
+      }
     ]
   },
   "occupation": {
