naviメニューの作成及びパスの作成

--- a/src/ejs/config.json
+++ b/src/ejs/config.json
@@ -11,5 +11,15 @@
   "contact": {
     "title": "",
     "description": ""
-  }
+  },
+  "nav": [
+    {
+      "link": "",
+      "title": "top"
+    },
+    {
+      "link": "contact",
+      "title": "contact"
+    }
+  ]
 }
