--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sass-lint": "^1.3.4",
     "gulp-size": "^3.0.0",
