--- a/src/ejs/config.json
+++ b/src/ejs/config.json
@@ -1,12 +1,12 @@
 {
   "default": {
-    "title": "",
-    "description": ""
+    "title": "法人向け語学研修・英語研修 - 産経オンライン英会話Plus",
+    "description": "産経グループの語学、教育、IT事業が集結した産経オンライン英会話Plusの法⼈サービスは、ビジネスにつながる⼒を⾝につけることができるオンライン英会話です。お客様のニーズに合わせて最適な研修プランをご提案します。"
   },
   "common": "",
   "home": {
-    "title": "",
-    "description": ""
+    "title": "法人向け語学研修・英語研修 - 産経オンライン英会話Plus",
+    "description": "産経グループの語学、教育、IT事業が集結した産経オンライン英会話Plusの法⼈サービスは、ビジネスにつながる⼒を⾝につけることができるオンライン英会話です。お客様のニーズに合わせて最適な研修プランをご提案します。"
   },
   "contact": {
     "title": "",
