--- a/src/ejs/config.json
+++ b/src/ejs/config.json
@@ -12,14 +12,5 @@
     "title": "",
     "description": ""
   },
-  "nav": [
-    {
-      "link": "",
-      "title": "top"
-    },
-    {
-      "link": "contact",
-      "title": "contact"
-    }
-  ]
+  "link": "https://go.human.sankei.co.jp/l/709243/2021-03-04/dsrgy?af=gsem_corporation"
 }
